tests/success/11_negation.c
int main() {
	int x = 5;
	int y = -x;
	return y + 10;	// Should return 5
}
