tests/fail/00_undeclared_var.c
int main() {
    return x;  // ERROR: undeclared variable
}
